--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         background-size: 25px;
       }
     </style>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="./html2canvas.js"></script>
     <script type="text/javascript" src="./electorates.js"></script>
     <script type="text/javascript" src="./createBallot.js"></script>
