--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
       html,
       body {
         margin: 0;
+        height: 100%;
+        overflow: hidden;
       }
       canvas {
+        background-color: #eef6e8;
         position: absolute;
         top: 0;
         left: 0;
