--- a/index.html
+++ b/index.html
@@ -1,115 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      html,
-      body {
-        margin: 0;
-        height: 100%;
-        overflow: hidden;
-      }
-      canvas {
-        background-color: #eef6e8;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-      }
-      #info {
-        position: absolute;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-        gap: 0px 0px;
-        grid-template-areas: ". .";
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: auto;
-      }
-      #copy {
-        background-color: #eef6e8;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
-          Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-          "Segoe UI Symbol";
-        padding: 20px;
-        height: 100%;
-        width: 309px;
-        min-height: 667px;
-        box-sizing: border-box;
-      }
-      #copy .row {
-        display: grid;
-        grid-template-columns: 0.145fr 0.145fr 1fr;
-        grid-template-rows: 1fr;
-        gap: 0px 10px;
-        height: 50px;
-        margin-top: 10px;
-      }
-      #copy .header {
-        display: grid;
-        grid-template-columns: 20% 55% 20%;
-        grid-template-rows: 1fr;
-        gap: 0px 5%;
-        font-weight: 100;
-        font-size: 12px;
-        height: 50px;
-        align-items: center;
-      }
-
-      #copy .header > div {
-        background-size: contain;
-        background-position: 50%;
-        background-repeat: no-repeat;
-        height: 100%;
-      }
-
-      .electorate-name {
-        font-size: 15px;
-        font-weight: 700;
-      }
-      .state-name {
-        font-size: 15px;
-        margin-top: 20px;
-      }
-      .instructions {
-        font-size: 18px;
-        font-weight: 700;
-        letter-spacing: -0.3px;
-        border-top: solid;
-        border-bottom: solid 1px;
-      }
-      .party {
-        font-size: 10px;
-      }
-      .box {
-        border: solid;
-        height: 25px;
-        width: 25px;
-        margin-top: 6px;
-      }
-      .party-logo {
-        background-position: 50% 40%;
-        background-repeat: no-repeat;
-        background-size: 25px;
-      }
-    </style>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+      name="viewport"
+    />
+
+    <link rel="stylesheet" href="style.css?v=1" />
+    <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript" src="./html2canvas.js"></script>
     <script type="text/javascript" src="./electorates.js"></script>
     <script type="text/javascript" src="./createBallot.js"></script>
-    <script type="text/javascript" src="./main.js"></script>
   </head>
   <body encoding="utf8">
     <div id="app">
-      <canvas id="sketchpad" width="500" height="500"></canvas>
-      <div id="info">
-        <div id="tweet">Tweet this.</div>
-        <input list="electorates" name="electorates" id="electorates-input" />
-        <datalist id="electorates"> </datalist>
-        <div id="tweet">Buy me a coffee.</div>
+      <canvas
+        id="sketchpad"
+        width="500"
+        height="500"
+        style="grid-area: sketchpad"
+      ></canvas>
+      <div id="info" style="grid-area: info">
+        <div id="title" class="desktop"><h1>Dongy Vote</h1></div>
+        <div id="description" class="desktop">
+          <p><b>Don't be a dick - draw on here instead!</b></p>
+          <p>
+            Every year, thousands of poll work themselves stiff counting votes.
+            The nights are long and hard, don't make them harder! Whatever you
+            were going to draw, they've seen it, so your joke may be in vein.
+          </p>
+          <p>Just select your electorate, and get to work!</p>
+        </div>
+        <div id="tweet">
+          <a
+            href="https://twitter.com/intent/tweet?button_hashtag=DongyVote&ref_src=twsrc%5Etfw"
+            class="twitter-hashtag-button"
+            data-text="I drew my dick online, not on the ballot."
+            data-url="https://dongyvote.com"
+            data-show-count="false"
+            >Tweet #DongyVote</a
+          >
+          <script
+            async
+            src="https://platform.twitter.com/widgets.js"
+            charset="utf-8"
+          ></script>
+        </div>
+        <select name="electorates" id="electorates-input">
+          <option value="" disabled selected>Select your electorate</option>
+        </select>
+        <div id="donate">
+          <a class="btn donate" href="https://ko-fi.com/abrahamilton"
+            >Buy me a coffee.</a
+          >
+        </div>
+        <button type="button" onclick="createBallot(selectedElectorate)">
+          Clear
+        </button>
       </div>
     </div>
   </body>
