--- a/index.html
+++ b/index.html
@@ -1,6 +1,72 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Google Tag Manager -->
+    <!-- <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-TMNM36L");
+    </script> -->
+    <!-- End Google Tag Manager -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+    <title>Dongy Vote - Draw on your Ballot</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Don't be a dick! Draw on this ballot instead."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dongy-vote.com" />
+    <meta property="og:title" content="Dongy Vote - Draw on your Ballot" />
+    <meta
+      property="og:description"
+      content="Don't be a dick! Draw on this ballot instead."
+    />
+    <meta
+      property="og:image"
+      content="https://dongy-vote.com/assets/meta.png"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://dongy-vote.com" />
+    <meta name="twitter:title" content="Dongy Vote - Draw on your Ballot" />
+    <meta
+      name="twitter:description"
+      content="Don't be a dick! Draw on this ballot instead."
+    />
+    <meta
+      name="twitter:image"
+      content="https://dongy-vote.com/assets/meta.jpg"
+    />
     <meta charset="UTF-8" />
     <meta
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
