Fixing meta image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://dongy-vote.com/assets/meta.jpg"
+      content="https://dongy-vote.com/assets/meta.png"
     />
     <meta charset="UTF-8" />
     <meta
