--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             href="https://twitter.com/intent/tweet?button_hashtag=DongyVote&ref_src=twsrc%5Etfw"
             class="twitter-hashtag-button"
             data-text="I drew my dick online, not on the ballot."
-            data-url="https://dongyvote.com"
+            data-url="https://dongy-vote.com"
             data-show-count="false"
             >Tweet #DongyVote</a
           >
