--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div id="description" class="desktop">
           <p><b>Don't be a dick - draw on here instead!</b></p>
           <p>
-            Every year, thousands of poll work themselves stiff counting votes.
+            Every three years, thousands of poll work themselves stiff counting votes.
             The nights are long and hard, don't make them harder! Whatever you
             were going to draw, they've seen it, so your joke may be in vein.
           </p>
